# hogwarts-apitest

./: .travis.yml  README.md  pyproject.toml
tests/: test_core.py
