[tool.poetry]
name = "hogwarts-apitest"
version = "0.1.0"
description = ""
authors = ["zhangyi <450245556@qq.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.3.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
coverage = "^5.0.1"
coveralls = "^1.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
